vlib/v/checker/tests/use_deprecated_function_warning.out
vlib/v/checker/tests/use_deprecated_function_warning.vv:18:2: error: function `xyz` has been deprecated
   16 | 
   17 | fn main() {
   18 |     xyz()
      |     ~~~~~
   19 |     abc()
   20 |     a := Abc{}
vlib/v/checker/tests/use_deprecated_function_warning.vv:19:2: error: function `abc` has been deprecated; use foo2 instead
   17 | fn main() {
   18 |     xyz()
   19 |     abc()
      |     ~~~~~
   20 |     a := Abc{}
   21 |     a.method()
vlib/v/checker/tests/use_deprecated_function_warning.vv:21:4: error: method `method` has been deprecated; please use a.xyz()
   19 |     abc()
   20 |     a := Abc{}
   21 |     a.method()
      |       ~~~~~~~~
   22 | }
