vlib/v/checker/tests/use_deprecated_function_warning.vv
[deprecated]
fn xyz() {
	println('hi')
}

[deprecated: 'use foo2 instead']
fn abc() {
	println('hi')
}

struct Abc {}
[deprecated: 'please use a.xyz()']
fn (a Abc) method() {
	println('hi from ${@METHOD}')
}

fn main() {
	xyz()
	abc()
	a := Abc{}
	a.method()
}
